--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,14 +9,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  pull_request_review:
-      name: request review from users and team when pull request is labeled with `review`
-      conditions:
-         label=review
-      actions:
-        request_reviews:
-          users: kelly103312
-            
+    types: [opened, synchronize, reopened]
+              
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -42,3 +36,20 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+   # Define las reglas de aprobación
+   pull_request_rules:
+      - name: Requiere aprobación de un miembro
+        conditions:
+          - required_approvals:
+              count: 1
+      - name: A job requires either runs-on or uses
+        if: always()
+        runs-on: ubuntu-latest
+        steps:
+          - name: Check if required approvals met
+            run: |
+              if [ ${{ steps.check_approvals.outputs.data.total_count }} -lt 1 ]; then
+                echo "Requiere aprobación de un miembro no cumplida."
+                exit 1
+              fi
